Closed
Bug 460595
Opened 17 years ago
Closed 17 years ago
Cannot drag text selection in input control
Categories
(Core :: DOM: Copy & Paste and Drag & Drop, defect, P1)
Core
DOM: Copy & Paste and Drag & Drop
Tracking
()
RESOLVED
FIXED
mozilla1.9.1b2
People
(Reporter: elmar.ludwig, Assigned: asaf)
References
Details
(Keywords: fixed1.9.1, regression)
Attachments
(1 file)
|
4.21 KB,
patch
|
smaug
:
review+
neil
:
superreview+
|
Details | Diff | Splinter Review |
Since the checkin of the patch for bug 459323, dragging a text selection from an input control (text area or text field) does no longer work. There is no drag cursor and dropping has no effect.
Steps to reproduce:
1. Select some text in some input control.
2. Try to drag the text with the mouse.
Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9.1b2pre) Gecko/20081018 Minefield/3.1b2pre
Flags: blocking1.9.1?
| Assignee | ||
Comment 1•17 years ago
|
||
Assignee: nobody → mano
Status: NEW → ASSIGNED
Attachment #343752 -
Flags: superreview?(jonas)
Attachment #343752 -
Flags: review?(Olli.Pettay)
| Assignee | ||
Updated•17 years ago
|
Priority: -- → P1
Target Milestone: --- → mozilla1.9.1b2
| Assignee | ||
Updated•17 years ago
|
Severity: normal → major
OS: Linux → All
Hardware: PC → All
Comment 2•17 years ago
|
||
Asaf, could you explain this a bit.
Comment 3•17 years ago
|
||
Ah, nevermind. Bug 455215 explains this.
Comment 4•17 years ago
|
||
Comment on attachment 343752 [details] [diff] [review]
patch
I assume you have tested dragging from and to <input> and <textarea> etc.
Neil, can you think of any easy way to add tests for this all? We really really need such tests.
The patch looks ok, but I'd either like to have tests or some explanation why automatic testing isn't possible.
Comment 5•17 years ago
|
||
You can't automate testing of drag and drop code that relies on the dragservice or the native apis to be called (and succeed). You can test some aspects of the new drag and drop api with the methods in bug 456093.
The editor code still uses the old api though. Changing that is ultimately the right fix for a lot of the editor code, but that's a larger task.
Comment 6•17 years ago
|
||
Can we at least get all these d&d tests into litmus?
Updated•17 years ago
|
Flags: in-testsuite?
Flags: in-litmus?
Comment 7•17 years ago
|
||
Comment on attachment 343752 [details] [diff] [review]
patch
Ok, we need this. r=me if you add some tests after Enn's patch and make sure that this gets to litmus.
Attachment #343752 -
Flags: review?(Olli.Pettay) → review+
Updated•17 years ago
|
Attachment #343752 -
Flags: superreview?(jonas) → superreview+
| Assignee | ||
Comment 8•17 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Bugs still remain. Just filed: Bug 460903
Flags: blocking1.9.1? → blocking1.9.1+
Updated•17 years ago
|
Whiteboard: [needs 1.9.1 landing]
Comment 10•17 years ago
|
||
In the meantime, this needs to land on 191, pronto.
| Assignee | ||
Comment 11•17 years ago
|
||
Beltzner, did you see the landing date?
| Assignee | ||
Updated•17 years ago
|
Whiteboard: [needs 1.9.1 landing]
Comment 12•17 years ago
|
||
Ah, I see, this landed before we branched. Thanks, Mano. Marking fixed1.9.1.
Keywords: fixed1.9.1
Updated•13 years ago
|
Flags: in-testsuite?
Flags: in-litmus?
You need to log in
before you can comment on or make changes to this bug.
Description
•