Bug 460595 - Cannot drag text selection in input control. r=smaug, sr=neil.